codegen/ui_tests/return_mut_ref.stderr
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-13fbbdaa684db49e.rmeta'
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-1b00becb051b9b4f.rmeta'
error: Rhai functions cannot return references
  --> ui_tests/return_mut_ref.rs:12:38
   |
12 | pub fn test_fn(input: &mut Clonable) -> &mut bool {
   |                                      ^^^^^^^^^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> ui_tests/return_mut_ref.rs:23:8
   |
23 |     if test_fn(n) {
   |        ^^^^^^^ not found in this scope
